updated these things

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="main">
       <h2>The Atlanta Improv League begins June 29th!</h2>
       <h2><a href="announcement.pdf">Announcement</a></h2>
-      <h3>Registration opens soon!</h3>
+      <h3><a href="https://docs.google.com/forms/d/1gAFS3UjMHPOfkbPXXD8FjxWkckYTbJGUUcHt1xJtpFY/edit">Registration now open!</a> - Deadline June 23, 2017</h3>
       <p><a href="rules.pdf">Official Rules</a></p>
       <div id="company-logos">
         <a href="http://villagecomedy.com"><img src="vt-logo.png" alt="Village Theatre logo"/></a>
